Tools/Era/SDK/era.h



typedef int int32_bool;


const int32_bool EXEC_DEF_CODE = true;


enum THookType: int
{
  HOOKTYPE_BRIDGE = 0,
  HOOKTYPE_CALL   = 1,
  HOOKTYPE_JUMP   = 2,
};


struct THookContext
{
  int EDI, ESI, EBP, ESP, EBX, EDX, ECX, EAX;
  int RetAddr;
};


typedef int32_bool (__stdcall *THookHandler) (THookContext* Context);


struct TEvent
{
  char* Name;
  void* Data;
  int   DataSize;
};


typedef void (__stdcall *TEventHandler) (TEvent* Event);


struct TGameState
{
  int RootDlgId;
  int CurrentDlgId;
};



typedef char TErmZVar[512];



ERA_API int* v;      // 1..10000
ERA_API TErmZVar* z; // 1..1000
ERA_API int* y;      // 1..100
ERA_API int* x;      // 1..16
ERA_API bool* f;     // 1..1000
ERA_API float* e;    // 1..100



// ======================= EVENTS ======================= //
/** Adds handler to be called when specific named event triggers, ex. "OnAfterWoG" or "OnSavegameWrite" */
ERA_API void (__stdcall *RegisterHandler) (TEventHandler Handler, const char* EventName);


/** Triggers named event, passing custom event data of specified length to its handlers */
ERA_API void (__stdcall *FireEvent) (const char* EventName, void* EventData, int DataSize);

ERA_API void (__stdcall *FireErmEvent) (int EventId);

ERA_API void (__stdcall *ExecErmCmd) (const char* CmdStr);

ERA_API void (__stdcall *ExtractErm) ();

ERA_API void (__stdcall *ReloadErm) ();

// ===================== END MAP RELATED FUNCTIONS ===================== //


// ======================= INI FILES ======================= //
ERA_API void (__stdcall *ClearAllIniCache) ();

ERA_API void (__stdcall *ClearIniCache) (const char* FileName);


/** Reads entry from ini file. The fill will be cached in memory for further fast reading */
ERA_API int32_bool (__stdcall *ReadStrFromIni) (const char* Key, const char* SectionName, const char* FilePath, char* ResultBuffer);


/** Writes new value to ini file cache in memory. Automatically loads ini to cache if necessary */
ERA_API int32_bool (__stdcall *WriteStrToIni) (const char* Key, const char* Value, const char* SectionName, const char* FilePath);


/** Saves cached ini file data on disk */
ERA_API int32_bool (__stdcall *SaveIni) (const char* FilePath);

// ===================== END INI FILES ===================== //


// ======================= HOOKS AND PATCHES ======================= //
/**
 * Installs new hook at specified address. Returns pointer to bridge with original code if any. Optionally specify address of a pointer to write applied patch structure
 * pointer to. It will allow to rollback the patch later. MinCodeSize specifies original code size to be erased (nopped). Use 0 in most cases.
 *
 * In case of bridge cook type calls handler function, when execution reaches specified address. Handler receives THookContext pointer.
 * If it returns true, overwritten commands are executed. Otherwise overwritten commands are skipped.
 * Change Context.RetAddr field to return to specific address after handler finishes execution with FALSE result.
 * The hook bridge code is always thread safe.
 */
void* Hook (void* Addr, THookHandler HandlerFunc, void** AppliedPatch = nullptr, int MinCodeSize = 0, THookType HookType = HOOKTYPE_BRIDGE);


/** Writes Count bytes from Src buffer to Dst code block */
ERA_API void (__stdcall *WriteAtCode) (int Count, void* Src, void* Dst);
// ===================== END HOOKS AND PATCHES ===================== //


// ======================= DEBUG AND INFO ======================= //
/** Displays system message box with error and terminates application */
ERA_API void (__stdcall *FatalError) (const char* Err);


/** Generates full Era debug info (scripts, plugins, patches, context) and saves all the files in Debug\Era directory */
ERA_API void (__stdcall *GenerateDebugInfo) ();


/** Returns IDs of game root dialog and current dialog. The first item in dialog class VMT tables is used as ID */
ERA_API void (__stdcall *GetGameState) (TGameState* GameState);

// ===================== END DEBUG AND INFO ===================== //


// ======================= SAVEGAMES ======================= //
/** Appends data portion to a certain named savegame section during game saving */
ERA_API void (__stdcall *WriteSavegameSection) (int DataSize, void* Data, const char* SectionName);


/** Reads data portion from a certain named savegame section during game loading. Returns number of bytes actually loaded */
ERA_API int (__stdcall *ReadSavegameSection) (int DataSize, void* Data, const char* SectionName);

// ===================== END SAVEGAMES ===================== //


// ======================= RESOURCES ======================= //
/** Returns ID of game button by its unique name, specified in *.btn file */
ERA_API int (__stdcall *GetButtonID) (const char* ButtonName);


/** Checks if binary patch exist. Provide full file name with extension like 'no prisons.bin' */
ERA_API int32_bool (__stdcall *PatchExists) (const char* PatchName);


/** Check if plugin with given name exists. Omit the extension. Era automatically searches for both deprecated 'dll' and modern 'era' extensions */
ERA_API int32_bool (__stdcall *PluginExists) (const char* PluginName);


/** Creates resource redirection for current savegame only. Whenever an attempt to load non-cached resource with OldFileName will be made, NewFileName will be used instead */
ERA_API void (__stdcall *RedirectFile) (const char* OldFileName, const char* NewFileName);


/**
 * Creates global resource redirection. Whenever an attempt to load non-cached resource with OldFileName will be made, NewFileName will be used instead.
 * Can be overriden by RedirectFile.
 */
ERA_API void (__stdcall *GlobalRedirectFile) (const char* OldFileName, const char* NewFileName);


/** Informs Era about moved game array or structure into another location. Specify old array address, old array size and new address */
ERA_API void (__stdcall *RedirectMemoryBlock) (void* OldAddr, int BlockSize, void* NewAddr);


/** Returns final address for old known game array or structure. Uses information from all RedirectMemoryBlock calls. If nothing is found, returns address itself */
ERA_API void* (__stdcall *GetRealAddr) (void* Addr);

// ===================== END GRAPHICS ===================== //


// ======================= ERA RICH TEXT SUPPORT ======================= //
/** Gives a name to a certain ARGB int32 color to use in colored texts */
ERA_API void (__stdcall *NameColor) (int Color32, const char* Name);